things to fix gap

--- a/styles/main.css
+++ b/styles/main.css
@@ -249,6 +249,7 @@ body {
   width: 50%;
   display: flex;
   flex-direction: row;
+  gap: 1.5rem;
   padding: 2.6rem 5.2rem;
 }
 
